# depotMgr

./: CMakeLists.txt  README.md  arucoConfig.yml  bin.cpp  bin.h  depotSort.cpp  findname.sh  group.h  inventory.xml  rack.h
include/: bin.h  group.h  rack.h
src/: argc_argv.hpp  bin.cpp  depotSort.cpp  group.cpp  rack.cpp
